Update lab content and manifest

--- a/multicloud-gcpagenticai-oracledb/workshops/tenancy/manifest.json
+++ b/multicloud-gcpagenticai-oracledb/workshops/tenancy/manifest.json
@@ -39,7 +39,7 @@
       "filename": "../../vertex-ai-agents-agent-builder/vertex-ai-agents-agent-builder.md"
     },
     {
-      "title": "Lab 6: Add Oracle AI Database MCP to Vertex AI agentic AI",
+      "title": "Lab 6: Develop Vertex AI Agents with ADK MCP Toolbox for Databases and Oracle AI Database",
       "filename": "../../agentic-mcp/agentic-mcp.md"
     },
     {
