Update RAG workshop docs: use venv instead of pyenv, reference python/run.sh, rewrite ADK agents lab with tasks for each run.sh option

--- a/multicloud-gcpagenticai-oracledb/workshops/tenancy/manifest.json
+++ b/multicloud-gcpagenticai-oracledb/workshops/tenancy/manifest.json
@@ -31,19 +31,12 @@
       "filename": "../../adb-ai/adb-ai.md"
     },
     {
-      "title": "Lab 4: Develop Vertex AI Agents with ADK (code) and Oracle AI Database",
+      "title": "Lab 4: Develop Vertex AI Agents with ADK and Oracle AI Database Vector RAG and MCP",
       "filename": "../../vertex-ai-agents-adk/vertex-ai-agents-adk.md"
     },
+
     {
-      "title": "Lab 5: Develop Vertex AI Agents with Agent Builder (no-code) and Oracle AI Database",
-      "filename": "../../vertex-ai-agents-agent-builder/vertex-ai-agents-agent-builder.md"
-    },
-    {
-      "title": "Lab 6: Develop Vertex AI Agents with ADK MCP Toolbox for Databases and Oracle AI Database",
-      "filename": "../../agentic-mcp/agentic-mcp.md"
-    },
-    {
-      "title": "Lab 7 (Optional): Other topics (Access via ORDS/Rest, Select AI/NL2SQL and ADB MCP, Multi-Agent Systems, Memory, ...",
+      "title": "Lab 5 (Optional): Other topics (Access via ORDS/Rest, Select AI/NL2SQL and ADB MCP, Multi-Agent Systems, Memory, ...",
       "filename": "../../agentic-advanced-topics/agentic-advanced-topics.md"
     },
     {
