--- a/sqlcl-mcp-server-intro/workshops/freesql/manifest.json
+++ b/sqlcl-mcp-server-intro/workshops/freesql/manifest.json
@@ -2,7 +2,8 @@
     "workshoptitle": "Explore the SQLcl MCP Server",
     "include": {"starter-file.sql":"../../files/starter-file.sql",
                 "sample.json":"../../files/sample.json",
-                "injected-step.md":"../../files/injected-step.md"},
+                "injected-step.md":"../../files/injected-step.md",
+              "test":"./files/test.md"},
       "help": "livelabs-help-db_us@oracle.com",
       "tutorials": [
         {
