updated images, improved prereqs, new pc and mac specific steps
updated images, improved prereqs, new pc and mac specific steps
<!-- WMS ID 11914 -->

--- a/sqlcl-mcp-server-intro/workshops/freesql/manifest.json
+++ b/sqlcl-mcp-server-intro/workshops/freesql/manifest.json
@@ -2,8 +2,7 @@
     "workshoptitle": "Explore the SQLcl MCP Server",
     "include": {"starter-file.sql":"../../files/starter-file.sql",
                 "sample.json":"../../files/sample.json",
-                "injected-step.md":"../../files/injected-step.md",
-              "test":"./files/test.md"},
+                "injected-step.md":"../../files/injected-step.md"},
       "help": "livelabs-help-db_us@oracle.com",
       "tutorials": [
         {
