--- a/sqlcl-mcp-server-intro/workshops/freesql/manifest.json
+++ b/sqlcl-mcp-server-intro/workshops/freesql/manifest.json
@@ -11,28 +11,28 @@
             "filename": "../../1-introduction.md"
         },
         {
-          "title": "Environment set-up",
+          "title": "Lab 1: Environment set-up",
           "description": "Installing and configuring necessary dependencies and pre-requisites.",
           "filename":"../../2-environment-set-up.md",
           "type": "freesql"
         },
          {
-            "title": "Explore SQLcl MCP server",
+            "title": "Lab 2: Explore SQLcl MCP server",
             "description": "Setting up a database connection, getting to know Cline and the SQLcl MCP Server.",
             "filename": "../../3-using-the-mcp-server.md"
         },
         {
-          "title": "Build database objects",
+          "title": "Lab 3: Build database objects",
           "description": "Using Agents and the SQLcl MCP Server to create new database objects.",
           "filename":"../../4-build-database-objects.md"
         },
         {
-          "title": "Build a React app",
+          "title": "Lab 4: Build a React app",
           "description": "Building a starter React-based application.",
           "filename":"../../5-build-a-react-app.md"
         },
          {
-            "title": "Build an HTML dashboard",
+            "title": "Lab 5: Build an HTML dashboard",
             "description": "Building a starter HTML-dashboard.",
             "filename": "../../6-build-a-html-dashboard.md"
         },
